--- a/syslogng-openobserve/docker-compose.yml
+++ b/syslogng-openobserve/docker-compose.yml
@@ -1,4 +1,5 @@
 # ロギングの共通設定 (アンカー)
+# /var/lib/docker/containers/<コンテナID>/<コンテナID>-local.log に保存
 x-logging-def: &logging-def
   driver: "local"
   options:
@@ -9,7 +10,7 @@ services:
   # https://openobserve.ai/docs/guide/quickstart/#self-hosted-installation
   OpenObserve:
     # simd は AVX512 に対応していないと (Xeon とか) 動作しない
-    image: public.ecr.aws/zinclabs/openobserve:v0.40.4
+    image: public.ecr.aws/zinclabs/openobserve:v0.60.0
     container_name: OpenObserve
     ports:
       - 5080:5080
@@ -23,9 +24,10 @@ services:
     restart: unless-stopped
     logging: *logging-def
 
+  # https://hub.docker.com/r/linuxserver/syslog-ng
   # https://docs.linuxserver.io/images/docker-syslog-ng/
   syslog-ng:
-    image: lscr.io/linuxserver/syslog-ng:latest
+    image: 1yen00docker/syslog-ng:1yen00_v4.10.2
     container_name: syslog-ng
     environment:
       - PUID=${UID:-1000}
